--- a/src/app/song/song.component.html
+++ b/src/app/song/song.component.html
@@ -1,4 +1,16 @@
 <!-- <h1>Travis Scott Stargazing</h1> -->
-<app-songdetails></app-songdetails>
+<div class="row">
+    <div class="col-5">
+        <input class="form-control" type="text" placeholder="Artist" [(ngModel)]="artist" >
+    </div>
+    <div class="col-5">
+        <input class="form-control" type="text" placeholder="Song" [(ngModel)]="song">
+    </div>
+    <div class="col-2">
+        <button class="btn btn-primary" (click)="onRequestSent()">Submit</button>
+    </div>
+</div>
+
+<!-- <app-songdetails></app-songdetails> -->
 <br>
-<app-lyrics></app-lyrics>
+<app-lyrics *ngIf="lyrics!='' "  [nLyric]="lyrics"></app-lyrics>
