navigation added using service

--- a/src/app/savedlyricspage/note/note.component.html
+++ b/src/app/savedlyricspage/note/note.component.html
@@ -5,7 +5,7 @@
             <div class="row">
            <div class="col"> <h5>Song</h5> </div>
            <div class="col-auto">
-                <button type="button" class="close pull-right" aria-label="Close" (click)="deleteNode(element.title, element.description)">
+                <button type="button" class="close pull-right" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
