--- a/src/app/savedlyricsbar/savedlyricsbar.component.html
+++ b/src/app/savedlyricsbar/savedlyricsbar.component.html
@@ -2,8 +2,12 @@
     <div class="card-header"> 
         
         <div class="row">
-            <div class="col align-middle text-center">Your Lyrics </div>
-            <div class="col-auto"><button class="btn btn-primary">My Lyrics</button></div>
+            <div class="col align-middle text-center">Saved Lyrics </div>
+            <div class="col-auto">
+              <button (click)="goSaved()" class="btn btn-primary btn-sm">
+              <i class="fa fa-arrow-right" aria-hidden="true"></i>
+              
+            </button></div>
         </div></div>
     <div class="card-body">
       <app-sidenote></app-sidenote>
