--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,9 @@
           <a class="nav-link" (click)="callhome()" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" (click)="calllyrics()" href="#">Lyrics <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
           </li>
       </ul>
