--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,8 +17,9 @@
           </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2" [(ngModel)]="searchword" type="search" placeholder="Search Songs" aria-label="Search"
+        [ngModelOptions]="{standalone: true}">
+        <button (click)="sendsearch()" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </nav>
