--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,53 @@
-<div class="card">
-    <div class="card-body">
-      This is some text within the Home Component.
+
+ <h1>New Releases</h1>  
+  <hr>
+
+  <div class="d-flex justify-content-center">
+    <div *ngIf="loading" class=" spinner-border text-info" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+  
+
+  <ng-container *ngIf=" !loading">
+
+
+  <div (click)="gotolyrics(item.artists[0].name, item.name, item.album_type, item.images[0].url)" *ngFor="let item of result" class="card mb-1" >
+    <div class="row no-gutters">
+      <div class="col-md-3">
+        <img src="{{item.images[0].url}}" class="card-img h-100" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{item.name}}</h5>
+          <!-- <p class="card-text" *ngFor="let artist of item.artists"> {{artist.name}} </p> -->
+          <p class="card-text"> {{item.artists[0].name}} </p>
+          <p class="card-text"><small class="text-muted">{{item.album_type| uppercase}}</small></p>
+        </div>
+      </div>
     </div>
   </div>
+  </ng-container>
+<!-- 
+<button (click)="open()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Select a Track to View Lyrics</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div> -->
