--- a/src/app/savedlyricsbar/savedlyricsbar.component.html
+++ b/src/app/savedlyricsbar/savedlyricsbar.component.html
@@ -1,10 +1,10 @@
-<div class="card">
+<div class="card ">
     <div class="card-header"> 
         
         <div class="row">
             <div class="col align-middle text-center">Saved Lyrics </div>
             <div class="col-auto">
-              <button (click)="goSaved()" class="btn btn-primary btn-sm">
+              <button (click)="goSaved()" class="btn btn-info btn-sm">
               <i class="fa fa-arrow-right" aria-hidden="true"></i>
               
             </button></div>
