--- a/src/app/song/song.component.html
+++ b/src/app/song/song.component.html
@@ -1,16 +1,77 @@
 <!-- <h1>Travis Scott Stargazing</h1> -->
-<div class="row">
-    <div class="col-5">
+<!-- <div class="row">
+    <div class="col-3">
         <input class="form-control" type="text" placeholder="Artist" [(ngModel)]="artist" >
     </div>
-    <div class="col-5">
+    <div class="col-3">
         <input class="form-control" type="text" placeholder="Song" [(ngModel)]="song">
     </div>
-    <div class="col-2">
+    <div class="col-3">
+        <input class="form-control" type="text" placeholder="Song" [(ngModel)]="keyword">
+    </div>
+    <div class="col-3">
         <button class="btn btn-primary" (click)="onRequestSent()">Submit</button>
     </div>
+</div> -->
+
+<div *ngIf="showemptymsg">
+  <div class="card" >
+    <div class="card-body">
+     <h2>Looking a Little Empty There :(</h2> <br>
+     <h6 class="text-info">Start searching or select a song from the Home Page to see its lyrics!</h6>
+    </div>
+  </div>
 </div>
 
-<!-- <app-songdetails></app-songdetails> -->
-<br>
-<app-lyrics *ngIf="lyrics!='' "  [nLyric]="lyrics"></app-lyrics>
+<app-songdetails
+[nSong]="song"
+[nArtist]="artist"
+[nImage]="songimage"
+
+*ngIf="!nosongerr && !showalbumerr && !loading && showinglyrics"
+
+></app-songdetails>
+
+<div class="d-flex justify-content-center">
+<div *ngIf="loading" class=" spinner-border text-info" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
+
+<ng-container *ngIf="!nosongerr && !showalbumerr && !loading && !showinglyrics">
+
+<div *ngFor="let song of result_songs; let i=index;">
+<div (click)="findlyrics(song.artists[0].name, song.name, song.album.images[0].url); onActivate();" class="card mb-1" >
+    <div class="row no-gutters">
+      <div class="col-md-3">
+        <img src={{song.album.images[0].url}} class="card-img h-100" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{song.name}}</h5>
+          <p class="card-text">{{song.artists[0].name}} </p>
+          <p class="card-text"><small class="text-muted">{{song.album.name}}</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</ng-container>
+
+<div class="alert alert-danger" *ngIf="error">
+    <h3>An Error was Encountered</h3>
+    <p>{{error}}</p>
+</div>
+
+
+<div class="alert alert-danger" *ngIf="showalbumerr">
+  <h3>No Lyrics Available</h3>
+  <p>You did not select a Single. Please select a single to view lyrics</p>
+</div>
+
+<div class="alert alert-danger" *ngIf="nosongerr">
+  <h3>No Lyrics Available</h3>
+  <p>Lyrics could not be retrieved for the song</p>
+</div>
+<app-lyrics *ngIf="showinglyrics && !loading && !nosongerr && !showalbumerr"  [nLyric]="lyrics"></app-lyrics>
