--- a/src/app/savedlyricsbar/sidenote/sidenote.component.html
+++ b/src/app/savedlyricsbar/sidenote/sidenote.component.html
@@ -1,8 +1,11 @@
 <div class="row">
-    <div class="card" style="margin-right: 27px; margin-left: 27px;">
+    <div class="card" style="padding-left: 5px; margin-right: 27px; margin-left: 27px;">
         <div class="card-body">
-          <p class="card-text">Lyrics come here</p>
+          <h6 class="card-title">{{song}}</h6>
+          <hr>
+          <p class="card-text">{{lyric}}</p>
           <!-- <a href="#" class="card-link">Archive</a> -->
         </div>
       </div>
     </div>
+  <br>
