--- a/src/app/savedlyricspage/note/note.component.html
+++ b/src/app/savedlyricspage/note/note.component.html
@@ -1,18 +1,18 @@
 
 <div class="row">
-    <div class="card" style="margin-right: 27px; margin-left: 27px; margin-bottom: 27px;">
+    <div class="card text-white bg-info mb-3" style="margin-right: 27px; margin-left: 27px; margin-bottom: 27px;">
         <div class="card-header">
             <div class="row">
-           <div class="col"> <h5>Song</h5> </div>
+           <div class="col"> <h5>{{song}}</h5> </div>
            <div class="col-auto">
-                <button type="button" class="close pull-right" aria-label="Close">
+                <button type="button" (click)="deleteLyric(song, lyric)" class="close pull-right" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             </div>
         </div>
         <div class="card-body">
-          <p class="card-text">Some lyrics that you like</p>
+          <p class="card-text">{{lyric}}</p>
           <!-- <a href="#" class="card-link">Archive</a> -->
         </div>
       </div>
