--- a/src/app/song/lyrics/lyrics.component.html
+++ b/src/app/song/lyrics/lyrics.component.html
@@ -1,8 +1,43 @@
 <div class="card text-white bg-info mb-3">
     <!-- <div class="card-header">Header</div> -->
     <div class="card-body">
-      <h5 class="card-title">Lyrics</h5>
-      <pre><br>{{element}}
+      <h5 class="card-title">
+        <div class="row">
+          <div class="col">Lyrics</div>
+          <div *ngIf="!selecting" class="col-auto"> <button class="btn btn-light" (click)="startsaving()" >Start Selecting</button></div>
+          <div *ngIf="selecting" class="col-auto"> <button class="btn btn-dark" (click)="stopsaving()" > Stop Selecting</button></div>
+        </div>
+        </h5>
+      <pre (mouseup)="showSelectedText()"><br>{{element}}
     </pre>
     </div>
   </div>
+<!-- 
+  <h3>Selected Text</h3>
+  <div>{{selectedText}}</div> -->
+
+  <!-- Button trigger modal -->
+<button [hidden]="true" #openbutton type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+  Launch static backdrop modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Save Selected Lyrics</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <pre style="color: black;"> {{selectedText}} </pre>
+      </div>
+      <div class="modal-footer">
+        <button type="button" (click)="saveLyrics()" class="btn btn-success" data-dismiss="modal">Save</button>
+        <button type="button" (click)="stopsaving()"  data-dismiss="modal" class="btn btn-danger">Stop Selecting</button>
+      </div>
+    </div>
+  </div>
+</div>
