--- a/src/app/song/songdetails/songdetails.component.html
+++ b/src/app/song/songdetails/songdetails.component.html
@@ -1,6 +1,6 @@
 <div class="card bg-dark text-white" >
    <div class="crop-height flip">
-      <img class="card-img scale flip" src={{imageelement}} alt="Card image">
+      <img class="card-img scale flip" style="filter: brightness(60%)" src={{imageelement}} alt="Card image">
     </div>
     <div class="card-img-overlay">
       <h5 class="card-title">{{songelement}}</h5>
