--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,3 +14,16 @@
   }
 
   .input-mysize { width: 150px }
+
+  input.search-query {
+    background-color:rgb(255, 255, 255);
+    color: black;
+}
+
+.navbar {
+    -webkit-box-shadow: 0 8px 6px -6px rgb(90, 90, 90);
+    -moz-box-shadow: 0 8px 6px -6px rgb(90, 90, 90);
+    box-shadow: 0 8px 6px -6px rgb(90, 90, 90);
+
+    /* the rest of your styling */
+}
