--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 
-
-<nav class="navbar  sticky-top navbar-expand-lg navbar-light bg-light">
+<!-- style="background-color: rgb(70, 160, 160);" -->
+<nav class=" navbar  sticky-top navbar-expand-lg navbar-dark bg-info" >
     <a class="navbar-brand" href="#">Lyriceum</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,15 +8,19 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" (click)="callhome()" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item" style="margin-right: 5px;">
+          <a class="nav-link active" (click)="callhome()" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" (click)="calllyrics()" href="#">Lyrics <span class="sr-only">(current)</span></a>
+        </li> -->
+        <li class="nav-item">
+          <a (click)="calllyrics()" class="nav-link" href="#">Your Lyriceum <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
           </li>
+         
       </ul>
       <div class="dropdown">
       <form class="form-inline my-2 my-lg-0 " >
@@ -25,12 +29,12 @@
         <div class="dropdown">     <!-- <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
       Button dropdown <span class="caret"></span>
     </button> -->
-    <input class="input-large search-query form-control mr-sm-2"
+    <input 
+    class="input-large search-query form-control mr-sm-2"
     [(ngModel)]="searchword" 
     type="text"
      placeholder="Search Songs"
       aria-label="Search"
-      style=" "
       data-toggle="dropdown"
       (input)="sendsearch()"
       (keydown.backspace)="backspacefunction()"
@@ -55,7 +59,7 @@
     </div>
   </div>
 
-        <button (click)="sendsearch()" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <!-- <button (click)="sendsearch()" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
 
       </form>
 
