--- a/src/app/savedlyricsbar/sidenote/sidenote.component.html
+++ b/src/app/savedlyricsbar/sidenote/sidenote.component.html
@@ -3,7 +3,7 @@
         <div class="card-body">
           <h6 class="card-title">{{song}}</h6>
           <hr>
-          <p class="card-text">{{lyric}}</p>
+          <p class="b card-text">{{lyric}}</p>
           <!-- <a href="#" class="card-link">Archive</a> -->
         </div>
       </div>
