--- a/src/app/savedlyricspage/note/note.component.html
+++ b/src/app/savedlyricspage/note/note.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div class="card text-white bg-info mb-3" style="margin-right: 27px; margin-left: 27px; margin-bottom: 27px;">
+    <div (click)="copyMessage(lyric)" class="zoom card text-white bg-info mb-3" style="margin-right: 27px; margin-left: 27px; margin-bottom: 27px;">
         <div class="card-header">
             <div class="row">
            <div class="col"> <h5>{{song}}</h5> </div>
