--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
   <ng-container *ngIf=" !loading">
 
 
-  <div (click)="gotolyrics(item.artists[0].name, item.name, item.album_type, item.images[0].url)" *ngFor="let item of result" 
+  <div (click)="gotolyrics(item.artists[0].name, item.name, item.album_type, item.images[0].url, item.id)" *ngFor="let item of result" 
       class="bg-light zoom card mb-1" >
     <div class="row no-gutters">
       <div class="col-md-3">
@@ -30,26 +30,33 @@
     </div>
   </div>
   </ng-container>
-<!-- 
-<button (click)="open()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+
+<button [hidden]='true' #getalbumtracks type="button" class="btn btn-primary" data-toggle="modal" data-target="#album">
   Launch demo modal
 </button>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="album" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Select a Track to View Lyrics</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{{current_album}}- {{current_artist}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <!--Album's Tracks-->
+        <div (click)="gotolyrics(track.artists[0].name, track.name, track.type, 'nourl', track.id)"
+         *ngFor="let track of albumsongs" class="zoom card border-info mb-3" >
+          <div class="card-body text-info">
+            <p  class="card-text">{{track.track_number}}. {{track.name}} </p>
+          </div>
+        </div>
+        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div> -->
+</div>
