about section fixed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -79,9 +79,9 @@
       </div>
       <div class="modal-body">
         Admit it, we all have a secret place where we copy & paste our favorite lyrics. But wouldn't it be easier to just have it all in one place?
-        <br> <br>
-       <b> Welcome to Lyriceum </b>
-       <br><br>
+        <br>
+      <span class="d-flex justify-content-center"> <b> Welcome to Lyriceum </b> </span>
+       <hr>
       </div>
       
         <div style="float:left;" class=" d-flex justify-content-center card-subtitle text-muted">Developed by Amish Raj & Utkarsh Agnihotri</div>
