--- a/src/app/song/songdetails/songdetails.component.html
+++ b/src/app/song/songdetails/songdetails.component.html
@@ -6,6 +6,9 @@
       <h5 class="card-title">{{songelement}}</h5>
       <p class="card-text">
           {{artistelement}}</p>
+
+          <i class="fab fa-spotify"></i> &nbsp;
+          <a class="text-white" target="_blank" href={{linkelement}}>Listen on Spotify</a>
       <!-- <p class="card-text">ASTROWORLD</p> -->
     </div>
   </div>
