--- a/src/app/song/song.component.html
+++ b/src/app/song/song.component.html
@@ -32,6 +32,7 @@
 [nSong]="song"
 [nArtist]="artist"
 [nImage]="songimage"
+[nLink]="link"
 
 *ngIf="!nosongerr && !showalbumerr && !loading && !showemptymsg"
 
