Toggle Selecting Button Shifted to the Top

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,6 +22,9 @@
           </li>
          
       </ul>
+      <div *ngIf="!selecting && showtogglebtn" class="col-auto"> <button class="btn btn-light" (click)="sendtoggle('notselecting')" >Start Selecting</button></div>
+          <div *ngIf="selecting && showtogglebtn" class="col-auto"> <button class="btn btn-dark" (click)="sendtoggle('selecting')" > Stop Selecting</button></div>
+
       <div class="dropdown">
       <form class="form-inline my-2 my-lg-0 " >
         
