--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
- <h1>New Releases</h1>  
- <div class="card-subtitle text-muted">Fresh off the block</div>
-  <hr>
+  <h1  class="card-title d-flex justify-content-center text-muted">New Releases</h1>
+  <p  class=" d-flex justify-content-center text-muted">Fresh off the Block.</p>
+
 
   <div class="d-flex justify-content-center">
     <div *ngIf="loading" class=" spinner-border text-info" role="status">
