--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,3 +7,88 @@
   .zoom:hover {
     transform: scale(1.03); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
+
+  .crop-height {
+    /* max-width: 1200px; /* native or declared width of img src (if known) */
+      max-height: 320px;
+      overflow: hidden;
+     }
+  
+  img.scale {
+    /* corrects small inline gap at bottom of containing div */
+      display: block; 
+      width: 100%; /* corrects obscure Firefox bug */
+      max-width: 100%;
+      /* just in case, to force correct aspect ratio */
+      height: auto !important;
+          display: block; /* corrects small inline gap at bottom of containing div */
+         width: 100%; /* corrects obscure Firefox bug */
+         max-width: 100%;
+    /* just in case, to force correct aspect ratio */
+    height: auto !important;
+    /*width: auto\9; 
+    /* ie8+9 - use modernizr instead of this \9 hack */
+    /* lt ie8 */
+    -ms-interpolation-mode: bicubic;
+      /* optionally force a minimum size if img src size is known: */
+      /* min-height: 320px; /* max-height of .crop-height */
+      /* min-width: 480px; /* proportional to above */ }
+  
+  .flip {
+      -webkit-transform: rotate(180deg);
+      -moz-transform:    rotate(180deg);
+      -ms-transform:     rotate(180deg);
+      -o-transform:      rotate(180deg);
+      transform:         rotate(180deg);
+      /* needed? not sure */
+      zoom: 1; }
+  
+  img.flip {
+      /* actually, aligns left within .cropheight */
+    float: right;
+      /* clearfix after? */ }
+  
+  
+  /* presentational CSS below */
+  
+  .page-wrap { 
+    padding: .5em 2em 2em;}
+  
+  h2 { 
+    margin-top: -.5em; 
+    font-style: italic; }
+  
+  figure {
+      margin: 2em 0; }
+  
+  figcaption {
+      margin: .5em 0;
+      font-size: 85%;
+      font-style: italic;
+      color: #888; }
+  
+  code {
+    background: #e3e3e3;
+    padding: 0 .25em; }
+
+    .image-cropper {
+      max-width: 100px;
+      height: auto;
+      position: relative;
+      overflow: hidden;
+  }
+  
+  .image-cropper {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  
+  img {
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+  }
