Clean and Easy message

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
    <div class="card-img-overlay">
      <h3 class="card-title">Welcome to Lyriceum</h3>
      <p class="card-text">
-         Find Lyrics and Save Them. <i>Very</i> Clean.</p> <br><br><br><br><br><br><br>
+         Find Lyrics and Save Them. Clean and Easy.</p> <br><br><br><br><br><br><br>
 
          <i class="fab fa-spotify"></i> &nbsp; 
          <span class="text-white">Powered by the Spotify API</span>
