Lyriceum Redirect in Header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 
 <!-- style="background-color: rgb(70, 160, 160);" -->
 <nav class=" navbar  sticky-top navbar-expand-lg navbar-dark bg-info" >
-    <a class="navbar-brand" href="#">Lyriceum</a>
+    <a class="navbar-brand" href="https://amishraj.github.io/lyriceum">Lyriceum</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
