Small change in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" (click)="calllyrics()" href="#">Lyrics <span class="sr-only">(current)</span></a>
         </li> -->
         <li class="nav-item">
-          <a (click)="calllyrics()" class="nav-link" href="#">Your Lyriceum <span class="sr-only">(current)</span></a>
+          <span (click)="calllyrics()" class="yourl nav-link">Your Lyriceum <span class="sr-only">(current)</span></span>
         </li>
         <li class="nav-item">
             <a data-toggle="modal" data-target="#exampleModal" class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
