--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,9 @@
 
 <!-- style="background-color: rgb(70, 160, 160);" -->
 <nav class=" navbar  sticky-top navbar-expand-lg navbar-dark bg-info" >
-    <a class="navbar-brand" href="https://amishraj.github.io/lyriceum">Lyriceum</a>
+    <a class="navbar-brand" href="https://amishraj.github.io/lyriceum">
+      <img src="assets/logowhite.png" style="height: 30px; width: 30px;" alt="">
+      Lyriceum</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -84,7 +86,8 @@
       <div class="modal-body">
         Admit it, we all have a secret place where we copy & paste our favorite lyrics. But wouldn't it be easier to just have it all in one place?
         <br>
-      <span class="d-flex justify-content-center"> <b> Welcome to Lyriceum </b> </span>
+      <span class="d-flex justify-content-center"> <b> Welcome to Lyriceum </b> </span> <br> 
+      <img class="shadowclass d-flex justify-content-center" src="assets/logo.png" style="height: 100px; width: 100px; " alt="">
        <hr>
       </div>
       
