--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,9 +9,12 @@
   
         <!-- Grid column -->
         <div class="col">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Lyriceum</h6>
+         <div class="row"> 
+           <img src="assets/logo.png" style="height: 100px; width: 100px; margin-bottom: 5px;" alt="">
+          <!-- <h6 class="text-uppercase mb-4 font-weight-bold">Lyriceum</h6> -->
           <p> Admit it, we all have a secret place where we copy & paste our favorite lyrics. But wouldn't it be easier to
               just have it all in one place? <br><br> Welcome to <b> Lyriceum </b> </p>
+            </div>
         </div>
         <!-- Grid column -->
   
