--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -13,6 +13,14 @@
     width: auto;
   }
 
+  img.shadowclass{
+    width: 50px;
+    height: 50px;
+    background-color: #1d1d1d;
+    border-radius:50%;
+    box-shadow: 0 0 0 1px #1d1d1d;
+  }
+
   .input-mysize { width: 150px }
 
   input.search-query {
