Mobile Support Trial 2

--- a/src/app/song/song.component.html
+++ b/src/app/song/song.component.html
@@ -1,11 +1,17 @@
-<div  class="btn-group-fab  d-lg-none" role="group" aria-label="FAB Menu">
+<!-- Floating Action Button like Google Material -->
+<div class="d-lg-none menu pmd-floating-action"  role="navigation"> 
+	<a (click)="registerclick()" class="pmd-floating-action-btn btn pmd-btn-fab pmd-btn-raised pmd-ripple-effect btn-primary" data-title="Save Lyrics" href="javascript:void(0);"> 
+		<span class="pmd-floating-hidden">Primary</span>
+		<i class="material-icons pmd-sm">save</i> 
+	</a> 
+</div>
+
+<!-- <div  class="btn-group-fab  d-lg-none" role="group" aria-label="FAB Menu">
   <div>
     <button type="button" class="btn btn-main btn-primary has-tooltip" data-placement="left" title="Menu"> <i class="fa fa-bars"></i> </button>
     <button (click)="registerclick()" type="button"  class="btn btn-sub btn-info has-tooltip" data-placement="left" title="Fullscreen"> <i class="fa fa-save"></i> </button>
-    <!-- <button type="button" class="btn btn-sub btn-danger has-tooltip" data-placement="left" title="Save"> <i class="fa fa-floppy-o"></i> </button>
-    <button type="button" class="btn btn-sub btn-warning has-tooltip" data-placement="left" title="Download"> <i class="fa fa-download"></i> </button> -->
   </div>
-</div>
+</div> -->
 <!-- <h1>Travis Scott Stargazing</h1> -->
 <!-- <div class="row">
     <div class="col-3">
