FAB Color Change

--- a/src/app/song/song.component.html
+++ b/src/app/song/song.component.html
@@ -1,6 +1,6 @@
 <!-- Floating Action Button like Google Material -->
 <div class="d-lg-none menu pmd-floating-action"  role="navigation"> 
-	<a (click)="registerclick()" class="pmd-floating-action-btn btn pmd-btn-fab pmd-btn-raised pmd-ripple-effect btn-primary" data-title="Save Lyrics" href="javascript:void(0);"> 
+	<a (click)="registerclick()" class="pmd-floating-action-btn btn pmd-btn-fab pmd-btn-raised pmd-ripple-effect btn-info " data-title="Save Lyrics" href="javascript:void(0);"> 
 		<span class="pmd-floating-hidden">Primary</span>
 		<i class="material-icons pmd-sm">save</i> 
 	</a> 
